- java 11 syntax adoption